--- a/fly.toml
+++ b/fly.toml
@@ -6,15 +6,12 @@ kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
 
-[build]
-  builder = "heroku/buildpacks:20"
-[build.args]
-  DJANGO_SETTINGS_MODULE = "animelister.animelister.settings.prod"
-  ALLOWED_HOSTS = "*"
+[deploy]
+  release_command = "python /app/manage.py migrate"
 
 [env]
   PORT = "8080"
-  DJANGO_SETTINGS_MODULE = "animelister.animelister.settings.prod"
+  ALLOWED_HOSTS = "*"
 
 [experimental]
   allowed_public_ports = []
