--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       target: dev
       args:
         DATABASE_URL: "psql://animelister:animelister@db/animelister"
-    command: pipenv run ./manage.py runserver_plus 0.0.0.0:8000
+    command: poetry run python manage.py runserver_plus 0.0.0.0:8000
     depends_on:
       - db
     links:
