--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "vite": "^2.6.4"
   },
   "dependencies": {
-    "alpinejs": "^3.5.0",
+    "htmx.org": "^1.6.0",
     "petite-vue": "^0.3.0"
   }
 }
