--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview"
   },
   "devDependencies": {
@@ -11,7 +11,11 @@
     "fast-glob": "^3.2.7",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.19",
-    "vite": "^2.6.4"
+    "typescript": "^4.3.2",
+    "vite": "^2.6.4",
+    "@vitejs/plugin-vue": "^1.9.3",
+    "vue-tsc": "^0.3.0",
+    "vue": "^3.2.16"
   },
   "dependencies": {
     "htmx.org": "^1.6.0",
