--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ django-taggit = "^1.5.1"
 Pillow = "^8.4.0"
 django-anymail = {extras = ["sendgrid"], version = "^8.4"}
 django-vite = "^1.2.1"
+django-components = "^0.17"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.29.0"
